--- a/templates/strategy_detail.html
+++ b/templates/strategy_detail.html
@@ -10,7 +10,7 @@
             <div class="card-header">
                 <h5 class="card-title mb-0">
                     <i class="bi bi-diagram-3"></i> {{ strategy_name }} - 总体表现
-                    <a href="{{ url_for('strategy_scores') }}" class="btn btn-outline-secondary btn-sm float-end">
+                    <a href="{{ url_for('analysis.strategy_scores') }}" class="btn btn-outline-secondary btn-sm float-end">
                         <i class="bi bi-arrow-left"></i> 返回概览
                     </a>
                 </h5>
