--- a/templates/add_buy.html
+++ b/templates/add_buy.html
@@ -181,7 +181,7 @@
                     </div>
                     
                     <div class="d-grid gap-2 d-md-flex justify-content-md-end">
-                        <a href="{{ url_for('trades') }}" class="btn btn-secondary me-md-2">
+                        <a href="{{ url_for('trading.trades') }}" class="btn btn-secondary me-md-2">
                             <i class="bi bi-arrow-left"></i> 返回
                         </a>
                         <button type="submit" class="btn btn-success">
