--- a/templates/base.html
+++ b/templates/base.html
@@ -12,7 +12,7 @@
     <!-- 导航栏 -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
         <div class="container">
-            <a class="navbar-brand" href="{{ url_for('index') }}">
+            <a class="navbar-brand" href="{{ url_for('main.index') }}">
                 <i class="bi bi-graph-up-arrow"></i> 多策略交易跟踪系统
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
@@ -21,22 +21,22 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav me-auto">
                     <li class="nav-item">
-                        <a class="nav-link" href="{{ url_for('index') }}">
+                        <a class="nav-link" href="{{ url_for('main.index') }}">
                             <i class="bi bi-house"></i> 首页
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="{{ url_for('trades') }}">
+                        <a class="nav-link" href="{{ url_for('trading.trades') }}">
                             <i class="bi bi-list-ul"></i> 交易记录
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="{{ url_for('add_buy') }}">
+                        <a class="nav-link" href="{{ url_for('trading.add_buy') }}">
                             <i class="bi bi-plus-circle"></i> 新建买入
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="{{ url_for('strategy_scores') }}">
+                        <a class="nav-link" href="{{ url_for('analysis.strategy_scores') }}">
                             <i class="bi bi-award"></i> 策略评分
                         </a>
                     </li>
