--- a/templates/symbol_comparison.html
+++ b/templates/symbol_comparison.html
@@ -9,7 +9,7 @@
             <div class="card-header">
                 <h5 class="card-title mb-0">
                     <i class="bi bi-bar-chart-steps"></i> 标的策略比较
-                    <a href="{{ url_for('strategy_scores') }}" class="btn btn-outline-secondary btn-sm float-end">
+                    <a href="{{ url_for('analysis.strategy_scores') }}" class="btn btn-outline-secondary btn-sm float-end">
                         <i class="bi bi-arrow-left"></i> 返回策略评分
                     </a>
                 </h5>
