--- a/templates/symbol_detail.html
+++ b/templates/symbol_detail.html
@@ -10,7 +10,7 @@
             <div class="card-header">
                 <h5 class="card-title mb-0">
                     <i class="bi bi-diagram-2"></i> {{ symbol_code }} - {{ symbol_name }} 策略比较
-                    <a href="{{ url_for('symbol_comparison') }}" class="btn btn-outline-secondary btn-sm float-end">
+                    <a href="{{ url_for('analysis.symbol_comparison') }}" class="btn btn-outline-secondary btn-sm float-end">
                         <i class="bi bi-arrow-left"></i> 返回标的列表
                     </a>
                 </h5>
